# godelai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLAUDE_ANALYSIS_PROCESS_AND_QUESTIONS.md  CLAUDE_CODE_VALIDATION_REPORT.md  CLAUDE_TO_GODEL_REPORT.md  CONTRIBUTING.md  Dockerfile  ENGINEERING_IMPROVEMENTS_REPORT.md  GODELAI_STATUS_AND_STRATEGY_JAN_2026.md  GODEL_VERIFICATION_REPORT_JAN13_2026.md  Genesis_Master_Prompt.md  LICENSE  L_GODELAI_STRATEGIC_CONTINUATION.md  L_OPINION_STATE_OF_GODELAI.md  MANIFESTO_LEARNING_VALIDATION_REPORT.md  MARKET_ANALYSIS_REPORT_JAN14_2026.md  README.md  RELEASE_v1.1.0_SUMMARY.md  ROADMAP_2026.md  SHAKESPEARE_BENCHMARK_ANALYSIS.md  SHAKESPEARE_BENCHMARK_REPORT.md  VERIFICATION_REPORT_70e5d7d.md  Validation_Experiment_Report.md  check_morning_results.py  claude_scale_validation.txt  debug_tscore_bug.py  diagnose_shakespeare_performance.py  diagnose_xor.py  docker-compose.yml  monitor_progress.py  pyproject.toml  requirements.txt  run_ab_comparison.py  run_ab_comparison_batch32.py  run_ab_comparison_epochs20.py  (+30 more)
.github/: PULL_REQUEST_TEMPLATE.md
.macp/: agents.json  ethical_framework.md  handoffs.json  validation.json
datasets/: README.md  upload_to_hf.py
docs/: AGENT_Y_CROSS_VALIDATION.md  AGENT_Y_EXPERIMENT_ALIGNMENT_GUIDE.md  ALIGNMENT_FORUM_POST_DRAFT.md  CLAUDE_CODE_CONFLICT_DATA_SCALING_GUIDE.md  CLAUDE_CODE_FIX_GUIDE.md  CLAUDE_CODE_VALIDATION_GUIDE.md  CLAUDE_SOUL_DOC_GODELAI_ANALYSIS.md  COLAB_TESTING_GUIDE.md  COLAB_TESTING_WORKFLOW.md  CONFLICT_DATA_SPEC.md  CSP_INTELLECTUAL_LINEAGE.md  ECOSYSTEM_ALIGNMENT_CTO_REPORT.md  ECOSYSTEM_ALIGNMENT_STRATEGY.md  GODELAI_LITE_CTO_ALIGNMENT_REPORT.md  GODELAI_STRATEGIC_ROADMAP_V2.md  GODELREPLAY_CLAUDE_CODE_GUIDE.md  GODELREPLAY_SPRINT_ETHICS_AND_PLAN.md  GROK_SUGGESTIONS_CTO_ANALYSIS.md  LINKEDIN_ARTICLE_CSP_ORIGIN.md  L_GODEL_Ethical_Operating_Framework.md  MACP_Documentation.md  MACP_Implementation_Example.md  MACP_v1.0_Specification.md  MULTI_MODEL_GENESIS.md  PEAS_GODELAI_ITERATION_PLAN.md  SEMANTIC_TSCORE_V4_REPORT.md  SIMPLEMEM_ALIGNMENT_ANALYSIS.md  STATUS_REPORT_20260120.md  STATUS_REPORT_20260207_CLAUDE_CODE.md  TINKER_ZPROTOCOL_INTEGRATION.md  TSCORE_EXPERIMENT_ANALYSIS.md  TSCORE_V3_EXPERIMENT_REPORT.md  multi_model_synthesis.md
dsl/: csp.dsl
ewc_dr_logs/: consolidation_20260403_060930.json
experiments/: permutedmnist_godelreplay.py  permutedmnist_mem_sweep.py  run_expanded_tscore_v3.py
flywheel_self_recursive_proof/: DESIGN.md  run_self_recursive_proof.py
godelai/: __init__.py  agent.py  (+3 more)
(+166 files in other folders)
