[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "godelai"
version = "0.1.0"
description = "An open-source small language model built on the C-S-P (Compression → State → Propagation) framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Alton", email = "founder@godelai.org"},
    {name = "Godel (Manus AI)", email = "godel@godelai.org"}
]
keywords = [
    "artificial-intelligence",
    "language-model",
    "alignment",
    "open-source",
    "csp-framework",
    "propagation",
    "wisdom"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
training = [
    "datasets>=2.14.0",
    "accelerate>=0.21.0",
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
]

[project.urls]
Homepage = "https://github.com/creator35lwb-web/godelai"
Documentation = "https://github.com/creator35lwb-web/godelai/docs"
Repository = "https://github.com/creator35lwb-web/godelai"
Issues = "https://github.com/creator35lwb-web/godelai/issues"

[project.scripts]
godelai = "godelai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["godelai*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4"]
ignore = ["E501", "D100", "D104"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["godelai"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
